使用 Colab 创建而成

--- a/Bag_of_Words.ipynb
+++ b/Bag_of_Words.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNyzChTUUTh4Qw+jC10+fQT",
+      "authorship_tag": "ABX9TyPKcX6Rm+2nRa7oVFX5m3QG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,18 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/Jiaye39/TimeSeriesAnalysis/blob/main/Bag_of_Words.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Bag of Words\n",
+        "We study 2 types of BoW vectors:\n",
+        "* **Raw Count**: actually count the number of occurences of each word in a text\n",
+        "* **TF-IDF**: adjust the raw count to favor words that appear a lot in a few documents, as opposed to those who appear a lot in all documents"
+      ],
+      "metadata": {
+        "id": "2rGDMt-GD26_"
+      }
     },
     {
       "cell_type": "markdown",
