使用 Colab 创建而成

--- a/Bag_of_Words.ipynb
+++ b/Bag_of_Words.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPKcX6Rm+2nRa7oVFX5m3QG",
+      "authorship_tag": "ABX9TyNnvENEkoYqYd8hi7dWUa2X",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,7 +49,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "h_6kius3yORa"
       },
@@ -90,7 +90,7 @@
         "id": "kO72L4gxzap3",
         "outputId": "e0cfcd93-ea25-4117-cf1f-306725f7a047"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -110,7 +110,7 @@
       "metadata": {
         "id": "LiDjdhz3z-Li"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -140,7 +140,7 @@
         "id": "d9Vrvbjj0XRA",
         "outputId": "aa5bd87a-ac89-4b12-cd90-3addb4d93bae"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -197,7 +197,7 @@
         "id": "DON7Nik40_tR",
         "outputId": "c04529d5-c159-4eb0-a53f-a294d40e32a2"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -234,7 +234,7 @@
       "metadata": {
         "id": "JOVPAM0z1kU0"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -265,7 +265,7 @@
         "id": "B9cLIpT63Gvs",
         "outputId": "65074e66-9657-4133-9516-0935da382a13"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -281,11 +281,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Sklearn Generalities\n",
+        "# Sklearn Generalities （CountVectorizer&TfidfVectorizer）\n",
         "Classes likes `CountVectorizer` or `TfidfVectorizer` works in the following way:\n",
         "* Instantiate an object with specific parameters (`v = CountVectorizer(...)`)\n",
         "* Fit this object to your corpus = learn the vocabulary (method `v.fit(...)`)\n",
-        "* Transform any piece of text you have into a vector (method `v.transform()`)\n"
+        "* Transform any piece of text you have into a vector (method `v.transform()`)\n",
+        "*   **用CountVectorizer或者TfidfVectorizer做特征提取，文本转化为bow后才可以进行回归等操作**"
       ],
       "metadata": {
         "id": "SwO24rpG-Emv"
@@ -299,7 +300,7 @@
       "metadata": {
         "id": "UQ0R67V9_FDq"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -326,7 +327,7 @@
       "metadata": {
         "id": "h3uFIPBL-FDY"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -354,7 +355,7 @@
         "    for l in np.array_split(list(zip(words, bow)), math.ceil(len(words) / 6)):\n",
         "        print(' | '.join([colored(f'{w:<15}:{float(n):>0.2f}', 'grey') if float(n) == 0 else colored(f'{w:<15}:{float(n):>0.2f}', on_color='on_yellow', attrs=['bold']) for w, n in l ]))\n"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -393,7 +394,7 @@
         "id": "uSP6hgpq-67D",
         "outputId": "d5dd4e72-3221-4ffc-d1c0-c7f9b6a8ddae"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -447,7 +448,7 @@
         "id": "GJT5BKEbAQi0",
         "outputId": "51ce3ba8-ebcf-40da-d2b0-8bceb764ccab"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -475,7 +476,7 @@
         "id": "xOgjhpPSAEeV",
         "outputId": "a770c33f-908b-41d2-f369-4defb400b539"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -552,7 +553,7 @@
         "id": "Q0R2-1O5A9Ay",
         "outputId": "2d21cca1-5b21-47d1-e7d9-c89301a3eab9"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -594,7 +595,7 @@
         "id": "HKJ5A7RDBffU",
         "outputId": "c4aae5d8-e080-47e4-cfc2-22d8303951aa"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -639,7 +640,7 @@
         "id": "GZs-oHI9BJwc",
         "outputId": "8e324cbb-7086-435c-bcd7-cc91eb660c64"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -701,7 +702,7 @@
         "id": "K5pF6HjdCLwc",
         "outputId": "98ca0d59-e2cd-4b00-f116-e77191b8a56e"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -746,7 +747,7 @@
         "id": "CQsJ6bjECokG",
         "outputId": "f6ad97f2-9d65-4a8d-c9cd-41e5bce93bd4"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1196,7 +1197,7 @@
         "id": "MeoHK32XCr08",
         "outputId": "49b5084b-8b64-4bd9-b08b-d03f8c71c841"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1241,7 +1242,7 @@
         "id": "O-tTecw-C2tC",
         "outputId": "932e67b2-38f2-4cc5-b1dc-db7869d5abc2"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1292,7 +1293,7 @@
         "id": "V4ec0CqEC6BE",
         "outputId": "45901e69-83d9-407e-fed6-6ed1b107465f"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1327,7 +1328,7 @@
         "id": "4e5OAprLC-lR",
         "outputId": "5e8f335b-f48b-4536-e6d6-cfe8af04d2a7"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
